# degit-rs

./: Cargo.toml  README.md
src/: lib.rs  main.rs  tests.rs
