[package]
name = "degit-rs"
version = "0.2.0"
authors = ["Vlad Pănăzan <brgdvz@gmail.com>", "Zach Fedor <zachfedor@gmail.com>"]
edition = "2024"
description = "Rust rewrite of degit"
license = "MIT"
readme= "README.md"
repository = "https://github.com/zachfedor/degit-rs"

[dependencies]
clap = "2.33.0"
regex = "1.1.7"
reqwest = "0.9.18"
indicatif = "0.11.0"
flate2 = "1.0.9"
tar = "0.4.26"
colored = "1.8.0"
