[package]
name = "degit-rs"
version = "0.2.1"
authors = [
    "Vlad Pănăzan <brgdvz@gmail.com>",
    "Zach Fedor <zachfedor@gmail.com>",
]
edition = "2024"
description = "Rust rewrite of degit"
license = "MIT"
readme = "README.md"
repository = "https://github.com/zachfedor/degit-rs"

[dependencies]
clap = { version = "4.5.51", features = ["cargo"] }
regex = "1.1.7"
reqwest = { version = "0.12.24", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
indicatif = "0.18.2"
flate2 = "1.0.9"
tar = "0.4.26"
colored = "3.0.0"
